	        - update validation_kproto


clustMixType_0.3-7  2022-12-09  - fixes according to win-builder: importFrom("stats", "median"), .Rd for na.rm and plot.kproto 
                                - NA treatment for kproto_gower (ln. 424): cluster membership NA if all varianbles are NA. Note kproto_gower does not allow for na.rm = "yes" data with removed missings are passed from kproto(). 
clustMixType_0.3-6  2022-12-07  - internal imputation and one step imputation of doi = 10.1007/s00357-022-09422-y implemented
                                - changing the argument na.rm from logical to character
                                - backwards compatibility is given, since TRUE is changed to "yes" and FALSE to "no" automatically
                                - added some new tests in test_basic regarding the imputation
clustMixType_0.3-5  2022-12-06  - fixes in test_basics (prediction for only 1 obs) and validation_kproto (stop for gower). 
clustMixType_0.3-4  2022-12-04  - plot.kproto added (wrapper aorund clprofiles). 
clustMixType_0.3-3  2022-12-04  - predict.kproto extended to data frame with only one obs. (ln.495, suggestd by G.Terziysky).
                                - additional $stdization element returned by kproto_gower() for further use in predict function.
                                - predict.kproto() for type = "gower" changed (now uses standardization from training data.
clustMixType_0.3-2  2022-11-19  - example added to .Rd     
				- commented chunks removed
                                - some tests for gower extension added
                                - error check in validation_kproto() ln. 972f as long as if it is not implemented for type == "gower"
clustMixType_0.3-1  2022-11-13  - kproto_gower.R added (internally called by kproto)    (...not built --> v0.3-2)
                                - impacts on kproto (new type argument), print.kproto and predict.kproto 

